# ABMI_Demo

./: README.md  ai.py  bird_prompt.txt  database.py  main.py  pyproject.toml  requirements.txt
static/assets/: patt.lizard  pattern-elephant-elefante.patt
static/css/: style.css
static/js/: display.js  mobile.js
templates/: display.html  mobile.html
