[project]
name = "abmi-demo"
version = "0.1.0"
description = "A real-time chat application with a bird animation display."
requires-python=">=3.12"
dependencies = [
    "fastapi==0.120.0",
    "uvicorn==0.38.0",
    "aiosqlite==0.20.0",
    "websockets==15.0.1",
]

tool.uv.package = false
# [build-system]
# requires = ["setuptools"]
# build-backend = "setuptools.build_meta"

# [project.scripts]
# start = "main:app"
